# LightCorrespondence

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: light_comm.hpp
src/: light_comm.cpp  main.cpp
